finalizacao para empresa e inicio para adminstradores

--- a/ambientesweb.digithobrasil/index.html
+++ b/ambientesweb.digithobrasil/index.html
@@ -26,7 +26,7 @@
 
                 <div class="descricao-do-menu menu-dev">
                     <div class="descricao-do-menu-escrito">
-                        PARA A EMPRESA
+                        Para a Empresa
                     </div>
                 </div>
 
@@ -36,46 +36,44 @@
                     <a href="http://bonusweb.dev.digithobrasil"><img src="images/logo-bonus.png" alt="logo-bonus"  title="logo-bonus"></a>
                     <a href="http://www.digithobrasil.com.br"><img id="ajuste-de-resolucao" src="images/logo-digithobrasil.png" alt ="logo-empresa" title="Nossa bela Empresa :)"></a>
                     <a href="http://fideback.digithobrasil/"><img id="ajuste-de-resolucao" src="#" alt="" title="Fideback" target="_blank">FIDEBACK</a>
-                    
-
-                    <div id="container">
-                      <div id="accordion">
+                    <div id="submenu-acordeao">
                         <div class="item">
                             <a href="http://glpi.digithobrasil/"><img id="ajuste-de-resolucao" src="images/logo-glpi.png" alt="logo-glpi" title="GLPI - EMPRESTIMO" ></a>
 
                             <p>Lorem ipsum nec ex prompta tractatos. Ea elit sale admodum vim, at velit nemore rationibus per. Ullum qualisque dissentias ei qui, in putent doctus cotidieque mei.</p>
                         </div>
                     </div>
+
+                    <div id="submenu-acordeao">
+                        <div class="item">
+                            <a href="http://colaborador.digithobrasil.com.br/"><img id="ajuste-de-resolucao" src="images/logo-portalcolaborador.png" alt="logo-colaborador" title="Portal do Colaborador" ></a>
+
+                            <p>Lorem ipsum nec ex prompta tractatos. Ea elit sale admodum vim, at velit nemore rationibus per. Ullum qualisque dissentias ei qui, in putent doctus cotidieque mei.</p>
+                        </div>
                     </div>
 
                 </div>
 
             </div>
-            <!-- end desenvolvimento -->
 
-            <!-- begin homologacao -->
             <div class="colunas">
 
                 <div class="descricao-do-menu menu-hom">
-                    Para Desenvolvedores
+                    Para Administradores
                 </div>
 
                 <div class="lista">
-                    <a href="http://bonusweb.homologacao.digithobrasil"><img src="images/logo-bonus.png" alt="logo-bonus"  title="logo-bonus" /></a>
-                    <a href="http://thomologacao.digithobrasil/hclientdgtbr/login.jsf"><img src="images/logo-horus.png" alt="logo-horus"  title="logo-horus" /></a>
-                    <a href="http://nexxus.homologacao.digithobrasil"><img src="images/logo-nexxus.png" alt="logo-nexxus"  title="Nexxus" /></a>
-                    <a href="http://nexxus.homologacao.digithobrasil.net:8084"><img src="images/logo-nexxus.png" alt="Nexxus"  title="Nexxus" /><span>acesso externo</span></a>
+                    <a href="https://aapj.bb.com.br/aapj/loginmpe.cdg.bb"><img id="ajuste-de-resolucao" src="images/logo-bancodobrasil.png" alt="logo-bb"  title="Acesso à conta Jurídica"></a>
+                    <a href="http://www.senior.com.br/"><img id="ajuste-de-resolucao" src="images/logo-senior.png" alt="logo-senior"  title="Senior Sistemas"></a>
+                    <a href="https://www.totvs.com/"><img id="ajuste-de-resolucao" src="images/logo-totvs.png" alt="logo-totvs"  title="TOTVS"></a>
 
                 </div>
 
             </div>
-            <!-- end desenvolvimento -->
-
-            <!-- begin producao -->
             <div class="colunas">
 
                 <div class="descricao-do-menu menu-pro">
-                    Para Administradores
+                    Para Desenvolvedores
                 </div>
 
                 <div class="lista">
