--- a/ambientesweb.digithobrasil/index.html
+++ b/ambientesweb.digithobrasil/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Ambientes Web - DígithoBrasil</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Ambietes Web - DígithoBrasil</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 
@@ -11,13 +11,10 @@
 	
     <main>
         <article>
-
-            <div class="shadow-topo"></div>
-
-            <div class="topo">
-                <img id="logo-digitho" src="images/logo-digithobrasil.png" alt="logo-digithobrasil" title="Dígitho Brasil">
-            </div>
-
+            <header>
+                <img id="logo-digitho" src="images/logo-digithobrasil.svg" alt="DigithoBrasil" title="Dígitho Brasil Soluções em Software">
+            </header>
+                       
         </article>
 
         <div class="conteudo">
